--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ authors = ["Mizunanari <54758260+Mizunanari@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-"discord.py" = "^1.7.3"
 python-dotenv = "^0.20.0"
+pokebase = "^1.3.0"
+tqdm = "^4.64.0"
+"discord.py" = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.961"
